--- a/v0.0.1/app.qss
+++ b/v0.0.1/app.qss
@@ -78,6 +78,20 @@ page {
   background-color: #fff
 }
 
+.button-mimic-box {
+  position: relative;
+  padding: 1rem;
+  /* height: 3rem; */
+  line-height: 1.6rem;
+  font-size: 0.8rem;
+  text-align: left;
+  word-break: break-all;
+  /* text-overflow: ellipsis;  */
+  overflow: hidden; 
+  /* white-space: nowrap; */
+  background-color: #fff
+}
+
 .tab-container {
   display: flex;
   align-items: center; 
